build: Upgrade to Angular 11

--- a/projects/mat-file-input/src/lib/mat-file-input/mat-file-input.component.html
+++ b/projects/mat-file-input/src/lib/mat-file-input/mat-file-input.component.html
@@ -3,5 +3,6 @@
   type="file"
   [attr.multiple]="multiple ? '' : null"
   [attr.accept]="accept"
+  [disabled]="disabled"
 />
 <span class="filename" [title]="fileNames">{{ fileNames }}</span>
